--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ee0f7f; }
+  background: #135db4; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #096984; }
+  background: #08c4df; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #528934; }
+  background: #80bf74; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #51b9ac; }
+  background: #e6930e; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #0b492e; }
+  background: #8bd782; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ea4fbb; }
+  background: #d28f68; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a32927; }
+  background: #c2116e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #9374c8; }
+  background: #40820e; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8f0ec8; }
+  background: #a828fd; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #081d1a; }
+  background: #c59a57; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #e41d73; }
+  background: #aecd39; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #3f979a; }
+  background: #f8552f; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #b8ab23; }
+  background: #7fe68e; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #da5014; }
+  background: #ad2b70; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #d5d4c9; }
+  background: #758f23; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #19facf; }
+  background: #77b309; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #fff86d; }
+  background: #b31855; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #1da1ea; }
+  background: #cf82e1; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #bd8aec; }
+  background: #1fc995; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #8eb5a6; }
+  background: #35a2ed; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0577a2; }
+  background: #da2786; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #b3f544; }
+  background: #e12408; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #8e0d53; }
+  background: #5b30d4; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #2b9a79; }
+  background: #ff0bbb; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #027646; }
+  background: #0c300c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #a502be; }
+  background: #55bd39; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #439c70; }
+  background: #e9f632; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #c635a8; }
+  background: #bc597e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9d536b; }
+  background: #f4c97e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #79f241; }
+  background: #6a443b; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #1e877a; }
+  background: #99dedf; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #6eeaca; }
+  background: #bde0f4; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #484122; }
+  background: #e08e4e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #99ae8b; }
+  background: #d2a5de; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #099776; }
+  background: #c32cce; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #86e627; }
+  background: #4c76a0; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8b6298; }
+  background: #db0de7; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ba06fb; }
+  background: #445551; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #ae5dcf; }
+  background: #8ed8b2; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #384464; }
+  background: #312c01; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #0a4382; }
+  background: #045417; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #08aee2; }
+  background: #ff97f1; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #abdf4b; }
+  background: #e7f1c4; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #148ba0; }
+  background: #cfe012; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #d6f715; }
+  background: #94f512; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f2f4b8; }
+  background: #e8b1b9; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #f79a62; }
+  background: #b44d3b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8775fa; }
+  background: #1e010b; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #84af90; }
+  background: #292943; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ffc48c; }
+  background: #2da643; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #1ea552; }
+  background: #56d2ec; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #287f1b; }
+  background: #7baafd; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2cd2bd; }
+  background: #47a9be; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #18a484; }
+  background: #9694b8; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #c5b8d7; }
+  background: #a8c747; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #d34f60; }
+  background: #c1d548; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #7065f9; }
+  background: #4a6cf0; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #08c140; }
+  background: #6c3103; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d7df76; }
+  background: #659253; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #0f07a9; }
+  background: #41c774; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #200d1d; }
+  background: #7547ac; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #7e0e2d; }
+  background: #d8fa01; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #089b14; }
+  background: #f47fec; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #7f6b90; }
+  background: #29cb2b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #0bb031; }
+  background: #d707b8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #29515d; }
+  background: #895097; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #9b454b; }
+  background: #5088d3; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #829a12; }
+  background: #abe837; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0b2db3; }
+  background: #1ec839; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b6b5d0; }
+  background: #e0e3ec; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #fd3fe5; }
+  background: #9814bd; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #879b69; }
+  background: #287d04; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #42642a; }
+  background: #e6d7fe; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #03503f; }
+  background: #8a0a84; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #94a708; }
+  background: #135d33; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f95521; }
+  background: #e3cc14; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #2c7697; }
+  background: #20b832; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a1473f; }
+  background: #fc4df8; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #0d3351; }
+  background: #960408; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #7a96c1; }
+  background: #af4149; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #2156a7; }
+  background: #df8b44; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #52ea8e; }
+  background: #186d53; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #605561; }
+  background: #2c5328; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #e06262; }
+  background: #f940fb; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #4d15e6; }
+  background: #40471f; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c59f5a; }
+  background: #8184d9; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #2e4254; }
+  background: #430eb2; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5a877b; }
+  background: #f57190; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #43238e; }
+  background: #e0eb6f; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #f2d1d4; }
+  background: #c39723; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #6bb7db; }
+  background: #837bb9; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6a155e; }
+  background: #c08544; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #508ac7; }
+  background: #d529fe; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #fb1968; }
+  background: #c835d8; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #7ada91; }
+  background: #24e71d; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #3ff4d3; }
+  background: #17640b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #02b77c; }
+  background: #21283f; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6ca1d4; }
+  background: #c36e47; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #ce2e40; }
+  background: #f4ba30; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d6312b; }
+  background: #12b2f0; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14944,7 +14944,7 @@ option {
   grid-template-columns: auto 1fr;
   align-items: center;
   text-align: left;
-  grid-gap: 10px; }
+  grid-gap: 14px; }
   .dashoard-dropdwon-btns-div .dropdown-toggle {
     display: flex;
     justify-content: space-between;
@@ -14972,8 +14972,8 @@ option {
       margin-bottom: 0px; }
     .dashoard-dropdwon-btns-div .dashboard-title-menu-dropdown a:last-child {
       border: 1px solid #776FFF;
-      padding: 10px 9px;
-      margin: 0px auto;
+      padding: 8px 9px;
+      margin: 0 0 6px 24px;
       width: 136px;
       text-align: center;
       border-radius: 4px;
@@ -14996,6 +14996,10 @@ option {
     padding: 12px;
     background: #fff;
     border: 1px solid #CDCDD6; }
+
+.dashboard-icons-div {
+  display: flex;
+  justify-content: space-between; }
 
 .sec-system-settings-wrapper .page-heading {
   font-family: 'proxima-regular' !important;
