--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #135db4; }
+  background: #cac0c6; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #08c4df; }
+  background: #f0de7f; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #80bf74; }
+  background: #2b5301; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #e6930e; }
+  background: #77e601; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #8bd782; }
+  background: #059354; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d28f68; }
+  background: #b44be9; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c2116e; }
+  background: #2557c6; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #40820e; }
+  background: #c9f2ec; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a828fd; }
+  background: #aa16e9; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #c59a57; }
+  background: #daa658; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #aecd39; }
+  background: #a516fa; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #f8552f; }
+  background: #5a4d5a; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #7fe68e; }
+  background: #b6bf33; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ad2b70; }
+  background: #45e733; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #758f23; }
+  background: #2004d7; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #77b309; }
+  background: #eff6c3; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b31855; }
+  background: #93d3db; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #cf82e1; }
+  background: #da8205; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #1fc995; }
+  background: #4213bd; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #35a2ed; }
+  background: #08fea9; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #da2786; }
+  background: #2a2ed9; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #e12408; }
+  background: #0513d6; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #5b30d4; }
+  background: #71e6b1; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #ff0bbb; }
+  background: #7f0646; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #0c300c; }
+  background: #538f37; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #55bd39; }
+  background: #13c434; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e9f632; }
+  background: #ea5689; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #bc597e; }
+  background: #634071; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #f4c97e; }
+  background: #e30555; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #6a443b; }
+  background: #de96ec; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #99dedf; }
+  background: #8e10e6; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #bde0f4; }
+  background: #9acd91; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e08e4e; }
+  background: #b9d2ae; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d2a5de; }
+  background: #1b062e; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #c32cce; }
+  background: #1a2ae9; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #4c76a0; }
+  background: #a0b336; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #db0de7; }
+  background: #f8b72e; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #445551; }
+  background: #359961; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8ed8b2; }
+  background: #6a8265; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #312c01; }
+  background: #57a4bf; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #045417; }
+  background: #57f2c4; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #ff97f1; }
+  background: #f191fc; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #e7f1c4; }
+  background: #0e7913; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #cfe012; }
+  background: #3dc826; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #94f512; }
+  background: #8b8940; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e8b1b9; }
+  background: #c7dc61; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b44d3b; }
+  background: #26f361; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #1e010b; }
+  background: #115bda; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #292943; }
+  background: #5b546f; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2da643; }
+  background: #7a8d9d; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #56d2ec; }
+  background: #550348; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7baafd; }
+  background: #cc5c65; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #47a9be; }
+  background: #61f806; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #9694b8; }
+  background: #a9f48e; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #a8c747; }
+  background: #b6652e; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c1d548; }
+  background: #6a870b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4a6cf0; }
+  background: #fe0c6a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #6c3103; }
+  background: #236a73; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #659253; }
+  background: #4dd9ad; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #41c774; }
+  background: #ddeceb; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #7547ac; }
+  background: #70447c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d8fa01; }
+  background: #337b56; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #f47fec; }
+  background: #881e3a; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #29cb2b; }
+  background: #c51725; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #d707b8; }
+  background: #ce43f1; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #895097; }
+  background: #251b88; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #5088d3; }
+  background: #57a24d; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #abe837; }
+  background: #4f64b3; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #1ec839; }
+  background: #86cd83; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #e0e3ec; }
+  background: #218776; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #9814bd; }
+  background: #3639f5; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #287d04; }
+  background: #ca655f; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #e6d7fe; }
+  background: #38452b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #8a0a84; }
+  background: #664c57; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #135d33; }
+  background: #52fb82; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e3cc14; }
+  background: #e35318; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #20b832; }
+  background: #ed3232; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #fc4df8; }
+  background: #18d898; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #960408; }
+  background: #cf9125; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #af4149; }
+  background: #5ebc49; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #df8b44; }
+  background: #e5f7c8; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #186d53; }
+  background: #93152a; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #2c5328; }
+  background: #174b14; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #f940fb; }
+  background: #9697c2; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #40471f; }
+  background: #72998e; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #8184d9; }
+  background: #95dc69; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #430eb2; }
+  background: #672fbe; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #f57190; }
+  background: #950b74; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e0eb6f; }
+  background: #de67b9; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #c39723; }
+  background: #dcdffd; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #837bb9; }
+  background: #cf3b0c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c08544; }
+  background: #0326cf; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d529fe; }
+  background: #c96b47; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #c835d8; }
+  background: #4551cc; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #24e71d; }
+  background: #cddbda; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #17640b; }
+  background: #44a870; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #21283f; }
+  background: #96a185; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c36e47; }
+  background: #833a6e; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #f4ba30; }
+  background: #904849; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #12b2f0; }
+  background: #b817da; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14939,6 +14939,30 @@ option {
   font-weight: 600;
   color: #4c4c4c; }
 
+.widget-box {
+  position: relative;
+  overflow: visible; }
+  .widget-box .widget-icons-div {
+    position: absolute;
+    top: 12px;
+    right: 8px;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-gap: 6px;
+    align-items: center; }
+    .widget-box .widget-icons-div .pointer-top-img {
+      position: absolute;
+      top: -12px;
+      right: 19px; }
+    .widget-box .widget-icons-div .dropdown-menu {
+      border-radius: 0px;
+      margin-left: -120px;
+      top: 6px !important; }
+      .widget-box .widget-icons-div .dropdown-menu a {
+        font-size: 12px;
+        text-decoration: none;
+        margin: 5px 0px; }
+
 .dashoard-dropdwon-btns-div {
   display: grid;
   grid-template-columns: auto 1fr;
@@ -14973,7 +14997,7 @@ option {
     .dashoard-dropdwon-btns-div .dashboard-title-menu-dropdown a:last-child {
       border: 1px solid #776FFF;
       padding: 8px 9px;
-      margin: 0 0 6px 24px;
+      margin: 10px 0 6px 24px;
       width: 136px;
       text-align: center;
       border-radius: 4px;
