--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #cac0c6; }
+  background: #212d67; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f0de7f; }
+  background: #50590f; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #2b5301; }
+  background: #ad66c9; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #77e601; }
+  background: #b46896; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #059354; }
+  background: #47d1b4; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b44be9; }
+  background: #12b81d; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #2557c6; }
+  background: #303d48; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #c9f2ec; }
+  background: #732b8e; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #aa16e9; }
+  background: #b3bbfd; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #daa658; }
+  background: #beb952; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #a516fa; }
+  background: #a30b71; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #5a4d5a; }
+  background: #fe0fa7; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #b6bf33; }
+  background: #c8d55d; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #45e733; }
+  background: #2f1292; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #2004d7; }
+  background: #eccf0e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #eff6c3; }
+  background: #607dd0; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #93d3db; }
+  background: #b82747; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #da8205; }
+  background: #983a8d; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #4213bd; }
+  background: #70aec9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #08fea9; }
+  background: #4f2d31; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2a2ed9; }
+  background: #f3094f; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #0513d6; }
+  background: #f009ed; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #71e6b1; }
+  background: #6dc47b; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7f0646; }
+  background: #801b36; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #538f37; }
+  background: #5976ee; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #13c434; }
+  background: #d40793; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #ea5689; }
+  background: #3a4583; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #634071; }
+  background: #a0dd71; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e30555; }
+  background: #3c1f0e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #de96ec; }
+  background: #cd33bb; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #8e10e6; }
+  background: #dfb61d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #9acd91; }
+  background: #0125a2; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #b9d2ae; }
+  background: #4a2c43; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #1b062e; }
+  background: #d0cdf2; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #1a2ae9; }
+  background: #3b188b; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #a0b336; }
+  background: #ae8c70; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f8b72e; }
+  background: #cbb453; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #359961; }
+  background: #efc036; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #6a8265; }
+  background: #073184; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #57a4bf; }
+  background: #d1f7a6; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #57f2c4; }
+  background: #ca72c4; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #f191fc; }
+  background: #590261; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #0e7913; }
+  background: #b2f88f; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #3dc826; }
+  background: #86f178; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #8b8940; }
+  background: #15ec6c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #c7dc61; }
+  background: #727fa8; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #26f361; }
+  background: #bfd8be; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #115bda; }
+  background: #159fc6; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #5b546f; }
+  background: #12b9a4; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #7a8d9d; }
+  background: #bc7173; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #550348; }
+  background: #ef6b6d; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #cc5c65; }
+  background: #d74e33; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #61f806; }
+  background: #f8706e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a9f48e; }
+  background: #625010; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #b6652e; }
+  background: #676737; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #6a870b; }
+  background: #1edc9c; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #fe0c6a; }
+  background: #eee89c; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #236a73; }
+  background: #0f7670; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4dd9ad; }
+  background: #9a0a26; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #ddeceb; }
+  background: #fc121c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #70447c; }
+  background: #39c857; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #337b56; }
+  background: #326bff; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #881e3a; }
+  background: #85b153; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c51725; }
+  background: #839833; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ce43f1; }
+  background: #bedda8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #251b88; }
+  background: #0d42f4; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #57a24d; }
+  background: #6aa353; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #4f64b3; }
+  background: #2236da; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #86cd83; }
+  background: #2f1e55; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #218776; }
+  background: #b8d534; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #3639f5; }
+  background: #5716ac; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ca655f; }
+  background: #bae057; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #38452b; }
+  background: #a30c60; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #664c57; }
+  background: #f609d2; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #52fb82; }
+  background: #3f8e80; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e35318; }
+  background: #1b9d10; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #ed3232; }
+  background: #573113; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #18d898; }
+  background: #1d971c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #cf9125; }
+  background: #8112ac; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #5ebc49; }
+  background: #9e9a5f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #e5f7c8; }
+  background: #e0cfb3; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #93152a; }
+  background: #8feeae; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #174b14; }
+  background: #2b9c7e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9697c2; }
+  background: #391dce; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #72998e; }
+  background: #1af978; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #95dc69; }
+  background: #67df8c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #672fbe; }
+  background: #dcd432; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #950b74; }
+  background: #3a3b77; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #de67b9; }
+  background: #1b87dc; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #dcdffd; }
+  background: #232876; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #cf3b0c; }
+  background: #84a9fb; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #0326cf; }
+  background: #83191f; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c96b47; }
+  background: #3a437e; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #4551cc; }
+  background: #cccb1b; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #cddbda; }
+  background: #9657fc; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #44a870; }
+  background: #7087fb; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #96a185; }
+  background: #057742; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #833a6e; }
+  background: #d8ecf3; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #904849; }
+  background: #63fa7c; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b817da; }
+  background: #d24ef1; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14939,6 +14939,13 @@ option {
   font-weight: 600;
   color: #4c4c4c; }
 
+.dashboard-top-sec-new {
+  align-items: center !important;
+  padding: 0px 38px 0px 24px;
+  display: grid;
+  grid-template-columns: 315px 1fr !important;
+  grid-gap: 5px !important; }
+
 .widget-box {
   position: relative;
   overflow: visible; }
@@ -14965,7 +14972,7 @@ option {
 
 .dashoard-dropdwon-btns-div {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 1fr auto;
   align-items: center;
   text-align: left;
   grid-gap: 14px; }
@@ -14973,10 +14980,14 @@ option {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 200px;
+    width: 100%;
     background: #fff;
     padding: 12px;
     border: 1px solid #CDCDD6; }
+  .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dropdown-menu {
+    border-radius: 0px; }
+    .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dropdown-menu a {
+      text-decoration: none; }
   .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dashboard-title-menu-dropdown {
     width: auto !important; }
     .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dashboard-title-menu-dropdown a:last-child {
@@ -14991,6 +15002,8 @@ option {
     top: -3px !important;
     width: 100%;
     border-radius: 0px; }
+    .dashoard-dropdwon-btns-div .dashboard-title-menu-dropdown a img {
+      width: 10px; }
     .dashoard-dropdwon-btns-div .dashboard-title-menu-dropdown a:nth-child(1) {
       border-bottom: 0px solid #a3a2a2;
       margin-bottom: 0px; }
@@ -15004,7 +15017,9 @@ option {
       color: #776fff; }
   .dashoard-dropdwon-btns-div .dropdown-item {
     font-size: 13px;
-    color: #4c4c4c; }
+    color: #4c4c4c;
+    padding-top: 10px;
+    padding-bottom: 10px; }
 
 .dashboard-search-with-dropdown {
   display: grid;
@@ -15013,6 +15028,10 @@ option {
   grid-gap: 10px; }
   .dashboard-search-with-dropdown .dashboard-title-menu-dropdown {
     border-radius: 0px; }
+    .dashboard-search-with-dropdown .dashboard-title-menu-dropdown a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      font-size: 14px; }
     .dashboard-search-with-dropdown .dashboard-title-menu-dropdown a:nth-child(1) {
       border-bottom: 0px solid #a3a2a2;
       margin-bottom: 0px; }
@@ -15022,8 +15041,9 @@ option {
     border: 1px solid #CDCDD6; }
 
 .dashboard-icons-div {
-  display: flex;
-  justify-content: space-between; }
+  display: grid;
+  grid-template-columns: 45px 58px;
+  align-items: center; }
 
 .sec-system-settings-wrapper .page-heading {
   font-family: 'proxima-regular' !important;
