--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -3539,6 +3539,13 @@ margin-top: 12px;
   }
 }
 //New css start here
+.dashboard-top-sec-new {
+  align-items: center!important;
+padding: 0px 38px 0px 24px;
+display: grid;
+grid-template-columns: 315px 1fr!important;
+grid-gap: 5px !important;
+}
 .widget-box {
   position: relative;
   overflow: visible;
@@ -3571,7 +3578,7 @@ right: 19px;
 }
 .dashoard-dropdwon-btns-div {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 1fr auto;
   align-items: center;
   text-align: left;
   grid-gap: 14px; 
@@ -3580,14 +3587,19 @@ right: 19px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 200px;
+  width: 100%;
   background: #fff;
   padding: 12px;
   border: 1px solid #CDCDD6;
 }
 .dropdown-more-wrapper {
-  .dropdown-more {
-
+  .dropdown-more {   
+  }
+  .dropdown-menu {
+    border-radius: 0px;
+    a {
+      text-decoration: none;
+    }
   }
   .dashboard-title-menu-dropdown {
     width: auto !important;
@@ -3606,6 +3618,11 @@ right: 19px;
   top: -3px !important;
   width: 100%;
   border-radius: 0px;
+  a {
+    img {
+      width: 10px;
+    }
+  }
   a:nth-child(1){
     border-bottom: 0px solid #a3a2a2;
 margin-bottom: 0px;
@@ -3623,6 +3640,8 @@ color: #776fff;
 .dropdown-item {
   font-size: 13px;
   color: #4c4c4c;
+  padding-top: 10px;
+padding-bottom: 10px;
 }
 }
 .dashboard-search-with-dropdown {
@@ -3632,6 +3651,11 @@ color: #776fff;
   grid-gap: 10px;
   .dashboard-title-menu-dropdown {
     border-radius: 0px;
+    a{
+      padding-top: 10px;
+padding-bottom: 10px;
+font-size: 14px;
+    }
     a:nth-child(1) {
       border-bottom: 0px solid #a3a2a2;
 margin-bottom: 0px;
@@ -3644,8 +3668,9 @@ border: 1px solid #CDCDD6;
   }
 }
 .dashboard-icons-div {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 45px 58px;
+  align-items: center;
 
 }
 .sec-system-settings-wrapper {
